# Orbis

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  setup_environment.bat
game/: CMakeLists.txt
game/assets/models/player/: carrier.blend  mech.blend  mech_energy_shield.blend  mech_shield.glb
game/assets/models/raiders/: bomber.blend  (+2 more)
game/src/: game.cpp  game.hpp  main.cpp
game/src/components/: ai_mech_controller_component.hpp  ai_strikecraft_controller_component.hpp  ammo_fired_by_component.hpp  ammo_impact_component.hpp  ammo_movement_component.hpp  ammo_raycast_component.hpp  atmosphere_component.hpp  carrier_component.hpp  carrier_launch_component.hpp  current_target_component.hpp  faction_component.hpp  hardpoint_component.cpp  hardpoint_component.hpp  hull_component.hpp  label_component.hpp  mech_engine_component.hpp  mech_modules_component.hpp  mech_navigation_component.hpp  name_component.hpp  planet_component.hpp  player_controller_component.hpp  scenic_camera_component.hpp  sector_camera_component.hpp  shield_component.hpp  ship_engine_component.hpp  ship_navigation_component.hpp  space_object_component.hpp  threat_component.hpp  weapon_component.hpp  wing_component.hpp
game/src/emscripten/: shell.html
game/src/entity_builder/: entity_builder.cpp  entity_builder.hpp
game/src/render/: game_ui_render_pass.cpp  game_ui_render_pass.hpp  sector_render_pass.cpp  sector_render_pass.hpp
game/src/render_pass/: threat_indicator_render_pass.cpp  threat_indicator_render_pass.hpp
game/src/sector/: defeat_window.cpp  defeat_window.hpp  encounter.cpp  encounter.hpp  encounter_stats.hpp  planet_mesh_generator.cpp  planet_mesh_generator.hpp  sector.cpp  sector.hpp  victory_window.cpp  victory_window.hpp
game/src/space_objects/: space_object.cpp  space_object.hpp  space_object_catalogue.cpp  space_object_catalogue.hpp
game/src/systems/: ai_mech_controller_system.cpp  ai_mech_controller_system.hpp  ai_strategic_system.hpp  ai_strikecraft_controller_system.cpp  ai_strikecraft_controller_system.hpp  ai_utils.cpp  ai_utils.hpp  ammo_system.cpp  ammo_system.hpp  camera_system.cpp  carrier_system.cpp  carrier_system.hpp  debug_render_system.cpp  label_system.cpp  label_system.hpp  orbit_simulation_system.cpp  orbit_simulation_system.hpp  planet_render_system.cpp  planet_render_system.hpp  player_controller_system.cpp  shield_system.cpp  shield_system.hpp  ship_navigation_system.cpp  space_object_render_system.cpp  space_object_render_system.hpp  target_overlay_system.cpp  threat_indicator_system.cpp  threat_indicator_system.hpp  weapon_system.cpp  weapon_system.hpp
game/src/ui/: button.cpp  element.cpp  element.hpp  heading.cpp  image.cpp  image.hpp  panel.cpp  prefab_editor.cpp  shape.cpp  shape.hpp  stack.cpp  text.cpp  text.hpp  theme.hpp  ui.cpp  ui.fwd.hpp  window.cpp
(+28 files in other folders)
